; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_asrc_anoisesrc.c_brown_filter.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_asrc_anoisesrc.c_brown_filter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (double (double, double*)* @brown_filter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @brown_filter(double %0, double* %1) #0 {
  %3 = alloca double, align 8
  %4 = alloca double*, align 8
  %5 = alloca double, align 8
  store double %0, double* %3, align 8
  store double* %1, double** %4, align 8
  %6 = load double, double* %3, align 8
  %7 = fmul double 2.000000e-02, %6
  %8 = load double*, double** %4, align 8
  %9 = getelementptr inbounds double, double* %8, i64 0
  %10 = load double, double* %9, align 8
  %11 = fadd double %7, %10
  %12 = fdiv double %11, 1.020000e+00
  store double %12, double* %5, align 8
  %13 = load double, double* %5, align 8
  %14 = load double*, double** %4, align 8
  %15 = getelementptr inbounds double, double* %14, i64 0
  store double %13, double* %15, align 8
  %16 = load double, double* %5, align 8
  %17 = fmul double %16, 3.500000e+00
  ret double %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
